source/room_stats/static/css/main.css
/*
 */

body {
  margin: 0;
  padding: 0;
}

a {
  color: #444;
  /* color: grey; */
}

a:focus {
  outline: none;
}

h1 > a {
  text-decoration: none;
  color: black;
}

.content-container {
  max-width: 1030px;
  margin: auto;
  margin-top: 10px;
  margin-bottom: 20px;
  padding: 15px;
}

.pagination {
  /* display: inline-block; */
  display: table;
  margin: 20px auto;
}

.pagination a {
  padding: 4px;
  text-decoration: none;
  color: rgb(80,80,80);
}

.text {
  margin: 10px 0px;
}

/*
 *
 * Navigation
 *
 */

nav {
  background-color: #333;
  color: white;
  margin-bottom: 10px;
}

.nav-header{
  font-size: 28px;
  font-weight: bold;
  display: inline-block;
  min-width: 50%;
  text-align: center;
  margin: 15px 0;
}

.nav-links {
  display: inline-block;
}

nav a {
  text-decoration: none;
  color: white;
  font-size: 18px;
  padding: 10px 15px;
  margin-bottom: 15px;
  display: inline-block;
}

nav a:focus {
  outline: none;
}

nav a:hover {
  background-color: #444;
}

/*
 *
 * Rooms
 *
 */

.room-container {
  display: flex;
  max-width: 750px;
  height: 160px;
  text-decoration: none;
  padding: 10px;
  margin: 10px auto;
  color: black;
  border: 1px #ddd solid;
  box-shadow: 0 0 5px #eee;
  background-color: #fcfcfc;
  color: #111;
}

.room-logo {
  height: 100px;
  width: 100px;
  align-self: center;
  padding: 0px 20px;
}

.room-logo > img {
  height: 100%;
  width: 100%;
}

.room-side-container {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  margin-left: 10px;
}

.room-header {
  font-size: 26px;
  font-weight: bold;
  flex: 1 1 100%;
}

.room-description {
  flex: 1 1 100%;
  font-size: 14px;
  max-height: 95px;
  overflow: auto;
  /* font-size: 0.8em; */
}

.room-description > p {
  margin: 0;
  padding: 0;
}

.room-details {
  flex: 1 1 100%;
  align-self: flex-end;
  display: flex;
  margin: 5px 10px 0px 0px;
  /* border-top: 1px #ddd solid; */
}

.room-members {
  flex: 1 1 50%;
  font-weight: bold;
  text-align: left;
  color: #999;
}

.room-category {
  flex: 1 1 50%;
  text-align: right;
}
/* .room-container { */
/*   border: 1px grey solid; */
/*   margin-bottom: 5px; */
/*   padding: 10px; */
/*   cursor: pointer; */
/*   background-color: rgb(245,245,245); */
/*   border-radius: 2px; */

/*   display: flex; */
/*   align-items: center; */
/*   flex-wrap: wrap; */
/*   text-decoration: none; */
/*   color: inherit; */

/* } */

/* .room-name { */
/*   font-size: 16px; */
/*   margin: 0 0 10px 0; */
/*   flex: 1 100%; */
/*   color: rgb(119,119,119); */
/* } */

/* a.room-title, */
/* a:visited.room-title{ */
/*   text-decoration: none; */
/*   color: rgb(119,119,119); */
/* } */

/* .room-public { */
/*   border-right: 1px grey dashed ; */
/* } */

/* .room-description { */
/*   flex: 1; */
/*   font-size: 0.6em; */
/* } */

/* .room-members-stats { */
/*   padding-left: 10px; */
/*   flex: 0; */
/*   display: flex; */
/*   flex-direction: left; */
/*   flex-wrap: wrap; */
/* } */

/* .room-members-count { */
/*   font-size: 0.8em; */
/*   flex: 1 100%; */
/*   margin-bottom: 5px; */
/*   text-align: right; */
/* } */

/* .room-members-modifier { */
/*   font-size: 0.6em; */
/*   flex: 1 100%; */
/*   text-align: right; */
/*   color: rgb(119,119,119); */
/* } */

/* .room-desc-empty { */
/*   color: rgb(90,90,90); */
/* } */


/*
 *
 * Categories
 *
 */


.category-widget {
  max-width: 1000px;
  /* margin: 0 auto; */
}

.category-block {
  font-size: 0;
  /* max-width: 600px; */
  margin: 0 auto;
  /* display: inline-block; */
  max-width: 1000px;
  /* max-width: 562.5px; */
}

.category-header {
  font-size: 18px;
  font-weight: bold;
  padding: 5px;
  background-color: #444;
  color: white;
  text-align: center;
  word-break: break-all;
}

.category-item {
  min-height: 180px;
  min-width: 250px;
  position: relative;
  background-repeat: no-repeat;
  background-size: cover;
  display: inline-block;
  opacity: 0.9;
  transition: opacity 1s;
}

.category-item > span {
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0,0,0, 0.75);
  color: white;
  text-align: center;
  font-size: 16px;
  padding: 8px 4px;
}

.category-item:hover {
  opacity: 1;
}

.category-item:focus {
  outline: none;
}




/*
 *
 * Room details page
 *
 */
.room-details-container {
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
}

.room-details-logo {
  width: 128px;
  height: 128px;
  margin: 10px;
}

.room-details-logo > img {
  width: 100%;
  height: 100%;
}

.room-details-main {
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  margin: 10px;
}


.room-details-header {
  font-size: 30px;
  font-weight: bold;
  flex: 1 1 100%;
}

.room-details-topic {
  flex: 1 1 100%;
  margin-top: 10px;
  font-size: 0.8em;
}

.room-details-topic > p {
  margin: 0;
}

.room-details-topic > p > a {
  color: grey;
}

.room-details-aliases {
  margin-top: 10px;
  font-size: 0.7em;
  font-family: italic;
  color: #808080;
}

.room-details-links {
  flex: 1 1 100%;
  margin: 10px 10px 5px 10px;
  border: 1px grey solid;
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
}

.room-details-links > div {
  flex: 1 1 33%;
  text-align: center;
  padding: 10px 0;
}

.room-details-links > div:nth-child(3n-1){
  border-left: 1px grey solid;
  border-right: 1px grey solid;
}

.room-details-buttons {
  margin: 5px 10px 5px 10px;

}

.room-details-buttons > a {
  display: inline-block;
  padding: 10px;
  text-decoration: none;
  color: darkblue;
  border: 1px darkblue solid;

}

.room-details-buttons > a:hover {
  color: #4682B4;
  border: 1px #4682B4 solid;
}

/*
 *
 * Tags
 *
 */

.tags-header {
  position: relative;
}

.tags-header h1 {
  display: inline-block;
}

.tags-header a{
  position: absolute;
  right: 25px;
  top: 30px;
  font-size: 12px;
  text-decoration: none;
  color: grey;
}

.tags-header a:focus{
  outline: none;
}

.tag-bordered {
  border: 1px #333 solid;
}

a.tag-cloud {
  text-decoration: none;
  display: inline-block;

  color: #111;
  /* border: 1px #333 solid; */
  padding: 5px 0.4em;
  margin: 2px;
  border-radius: 5px;
}

a.tag-cloud:hover {
  background-color: #333;
  color: white;
}

/*
 *
 * Widget
 *
 */

.widget {
}

.widget-header {
  font-size: 18px;
  font-weight: bold;
  padding: 5px;
  background-color: #444;
  color: white;
  text-align: center;
  word-break: break-all;
  position: relative;
}

.widget-header > a {
  color: white;
  font-size: 12px;
  text-decoration: none;
  font-weight: normal;
  text-align: right;

  position: absolute;
  right: 10px;
  top: 8px;
}

/*
 *
 * Utils
 *
 */
.positive {
  color: green;
}

.negative {
  color: red;
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.blur {
  font-size: 6px;
  text-shadow: 0 0 3px #000;
	color: rgba(255,255,255,0);

}

